Remove public available unzip method that was used only in private tool ()